k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: densityplays
  namespace: densityplays
spec:
  selector:
    app: densityplays
  ports:
  - port: 8080
    targetPort: 8080
    name: api
  - port: 4173
    targetPort: 4173
    name: ui
